First version of add user
