# src/main/resources/api.yaml
@@ -56,8 +56,71 @@ paths:
         default:
           description: Unexpected error
 
+  /addUser:
+    post:
+      summary: Add a user to the system
+      tags:
+        - add user
+      operationId: addUser
+      responses:
+        '200':
+          description: A user System object.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserSystemResponse'
+
+        '400':
+          description: The specified user ID is invalid (not a number).
+        '404':
+          description: A user with the specified ID was not found.
+        default:
+          description: Unexpected error
+
 components:
   schemas:
+    UserSystemResponse:
+      title: User System Response
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        phone:
+          type: string
+        address:
+          type: object
+          $ref: '#/components/schemas/UserAddress'
+      required:
+        - id
+        - phone
+        - address
+    UserAddress:
+      title: User Address
+      type: object
+      properties:
+        street:
+          type: string
+        street_name:
+          type: string
+        city:
+          type: string
+        state:
+          type: string
+        country:
+          type: string
+        country_code:
+          type: string
+        postal_code:
+          type: string
+      required:
+        - street
+        - street_name
+        - city
+        - state
+        - country
+        - country_code
+        - postal_code
 
     UsersResponse:
       title: Users Response
@@ -67,7 +130,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/UserResponse'
-
     UserResponse:
       title: Users Response
       type: object
